2012-04-07  Hedayat Vatankhah  <hedayat.fwd@gmail.com>

	* lib/oxygen/simulationserver/simulationserver.cpp (SimulationServer::Step): 
	- quit if GameControlServer is finished (e.g. the end of a game)

2012-02-16  Hedayat Vatankhah  <hedayat.fwd@gmail.com>

	* lib/salt/gmath.h: 
	- add missing std:: prefix for isfinite (fix gcc 4.7 compile error)

2012-02-14  Sander van Dijk  <sgvandijk@gmail.com>

	* lib/zeitgeist/scriptserver/scriptserver.cpp (RunInitScript): 
	* spark/spark.h (Spark): 
	* spark/spark.cpp (Spark): 
	- add --init-script-prefix option to specify location of spark.rb, zeitgeist.rb, etc

2012-01-22  Hedayat Vatankhah  <hedayat.fwd@gmail.com>

	* lib/kerosin/renderserver/rendercontrol.cpp (RenderControl::EndCycle): 
	* lib/kerosin/openglserver/openglserver.cpp (OpenGLServer::Init): 
	- check if opengl system wants to quit
	
	* plugin/openglsyssdl/openglsystemsdl.h (OpenGLSystemSDL.mWantsToQuit): 
	* plugin/openglsyssdl/openglsystemsdl.cpp (OpenGLSystemSDL::Update): 
	- handle SDL_QUIT event and add WantsToQuit function
	
	* lib/kerosin/openglserver/openglsystem.h (OpenGLSystem):
	- add WantsToQuit() function

2011-05-02  Hedayat Vatankhah  <hedayat.fwd@gmail.com>

	* CMakeLists.txt: 
	- strip files when creating binary packages
	- installer enhancements for mingw32 based setup
	
	* plugin/odeimps/CMakeLists.txt: 
	* plugin/collisionperceptor/CMakeLists.txt: 
	- added complete ode dependencies

2011-05-01  Hedayat Vatankhah  <hedayat.fwd@gmail.com>

	* cmake/FindODE.cmake: 
	- don't overwrite ode-config settings under windows platform (if available)
	
	* lib/kerosin/openglserver/openglserver.cpp (OpenGLServer::GetExtension): 
	* lib/salt/gmath.h: 
	* lib/salt/sharedlibrary.cpp: 
	* lib/zeitgeist/scriptserver/scriptserver.cpp: 
	- compilation fix under mingw32
	(ScriptServer::RunInitScriptInternal): 
	- enclose source and dest paths for copy command in double quotes
	
	* utility/rcssnet/socket.hpp: 
	* utility/rcssnet/tcpsocket.cpp: 