@@ -1,3 +1,15 @@
+2012-04-10  Hedayat Vatankhah  <hedayat.fwd@gmail.com>
+
+	* lib/oxygen/simulationserver/agentcontrol.h: 
+	* lib/oxygen/simulationserver/agentcontrol.cpp: 
+	* lib/oxygen/simulationserver/agentcontrol_c.cpp:
+	- AgentControl multi-threaded implementation added with some cleanups. 
+	  Thanks to Andreas Seekircher for providing the patch. 
+	 
+	* spark/spark.rb: 
+	- sets AgentControls multi-threaded mode according to $threadedAgentControl
+	  variable
+
 2012-04-07  Hedayat Vatankhah  <hedayat.fwd@gmail.com>
 
 	* lib/oxygen/simulationserver/simulationserver.cpp (SimulationServer::Step): 
